<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scene_3_activity_2"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:gravity="center_horizontal"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="15sp"
        android:text="@string/please_input_contactName"/>
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:id="@+id/edTxt_contactName"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/please_input_contactNumber"/>
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:id="@+id/edTxt_contactNumber"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scene_3_config_finish"
        android:layout_marginTop="40dp"
        android:id="@+id/btn_scene_3_config_finish"/>

</LinearLayout>