<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scene_3_activity_1"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:gravity="center_horizontal"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scene_3_contactInfo"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:visibility="invisible"
        android:id="@+id/txtV_scene_3_contactInfo_label"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:visibility="invisible"
        android:id="@+id/txtV_scene_3_contactInfo"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scene_3_add_contact"
        android:layout_marginTop="40dp"
        android:id="@+id/btn_scene_3_add_contact"/>

</LinearLayout>